Feature: Endpoint to get payment intent
